# OptionsParser

./: CMakeLists.txt
Example/: CMakeLists.txt  main.c
Source/: CMakeLists.txt  option_parser.c  option_parser.h
Tests/: CMakeLists.txt  test.c
